--- a/css/forside.css
+++ b/css/forside.css
@@ -1,4 +1,18 @@
 
+:root{
+    --text-color: #6d614d;
+    --background-color: #ffffff;
+    --header-color: #abc7ab;
+    --tema-color-1:#9eb9b9;
+    --tema-color-2:#88a18f;
+    --tema-color-3:#b8cb96;
+    --tema-color-4:#c9b792;
+    --body-color:#fffaec;
+}
+
+body{
+    background-color: var(--tema-color-1);
+}
 
 #screen{
     width: 100%;
