--- a/css/tema_5.css
+++ b/css/tema_5.css
@@ -17,6 +17,19 @@ a:hover{
     border-bottom: solid var(--tema-color-2) 2px;
 }
 
+.color{
+    height: 100px;
+    background-color: var(--tema-color-3);
+}
+
+.color_2{
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 25px;
+    background-color: var(--tema-color-2);
+}
+
 @media (max-width: 700px){
     
 }
