--- a/css/tema_5.css
+++ b/css/tema_5.css
@@ -30,6 +30,34 @@ a:hover{
     background-color: var(--tema-color-2);
 }
 
+.grid_1{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.grid_2{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.grid_2 img{
+    margin:0%;
+    padding:5px;
+    gap: 5px;
+}
+
+
 @media (max-width: 700px){
     
+    .grid_1 {
+        grid-template-columns: 1fr;
+    }
+
+    .grid_2 {
+        padding: 20px;
+    }
+
+    .order{
+        order: 2;
+    }
 }
