--- a/css/tema_5.css
+++ b/css/tema_5.css
@@ -46,6 +46,11 @@ a:hover{
     gap: 5px;
 }
 
+.span_1{
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
 
 @media (max-width: 700px){
     
